add-ons(metabase): add the password reset procedure